--- a/src/views/notFound.ejs
+++ b/src/views/notFound.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 
-    <%- include('partials/head') %>
+    <%- include('partials/head' , {title: 'Pagina no Encontrada' , styles: ['404']}) %>
         <div class="notFoundContainer">
             <span class="not-found">404! </span>
             <p> No hemos podido encontrar esta pagina</p> <br>
