--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,54 +1,71 @@
 <footer>
 
-    <section class="footerTittle">
-        <h1> Mundo tech store </h1>
-            <h3>  Copyright © 2010-2023 MundoTechStore S.R.L. </h3>
-   </section>
+    <section class="footerTop">
 
-    <section class="detailsContainer">   
-        
-        <div class="details">
-            <h3>SIGUENOS EN</h3>
-                <div class="redes">
-                    <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://api.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
-                            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
-                                <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
-                                    <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
-                                        </div>
+        <section class="footerInfo">
+            <img class="logofoot" src="/images/logo/footerlogo.png" alt="logo">
+            <p> Tenemos lo que necesitas para tu hogar y tus seres queridos, Somos el lugar el lugar ideal para siempre
+                estar conectado </p>
+            <form action="submit" class="footerForm">
+                <input class="footerFormInput" type="text" placeholder="Correo electronico">
+                <button class="footerFormButton"> susbcribirme </button>
+            </form>
+
+        </section>
+
+        <section class="detailsContainer">
+
+            <div class="footerDetail" id="aboutUs">
+                <h3 class="detailTittle">NAVEGA</h3>
+                <div class="footerRoutes">
+                    <P><a href="/">Home</a></P>
+                    <P><a href="//users/login">Inicia Session</a></P>
+                    <P><a href="/users/register">Registrate</a></P>
+                </div>
+            </div>
+
+            <div class="footerDetail">
+                <h3 class="detailTittle">INFORMACIÓN</h3>
+                <div class="footerRoutes">
+                    <P><a href="/">Inicio</a></P>
+                    <P><a href="#contacto">Contacto</a></P>
+                    <P><a href="#">Categorias</a></P>
+                    <P><a href="/products/indexProduct">Productos</a></P>
+                </div>
+            </div>
+
+            <div class="footerDetail">
+                <h3 class="detailTittle">LEGAL</h3>
+                <div class="footerRoutes">
+                    <P><a href=""> Términos y condiciones</a> </P>
+                    <P><a href=""> Asistencia</a></P>
+                    <P><a href="">Política de Privacidad</a></P>
+                    <P><a href="">Centro de ayuda</a></P>
+                </div>
+            </div>
+
+        </section>
+
+    </section>
+
+    <section class="footerBottom">
+
+        <div class="footerRedes">
+            <br>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram footIcons"></i></a>
+            <a href="https://api.whatsapp.com/"><i class="fa-brands fa-whatsapp footIcons"></i></a>
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook footIcons"></i></a>
+            <a href="https://twitter.com/"><i class="fa-brands fa-twitter footIcons"></i></a>
+            <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin footIcons"></i></a>
         </div>
 
-        <div class="details" id="aboutUs">
-            <h3>CONTACTO</h3>
-                <h4><i class="fa-solid fa-location-dot"></i> Ubicación</h4>
-                    <h4><i class="fa-solid fa-phone"></i> 3219077777</h4>
-                        <h4><i class="fa-solid fa-envelope"></i> Mundotech_Global@outlook.es </h4>
-                            <h4><i class="fa-solid fa-alarm-clock"></i> Lun-Sab 8:00 - 6:00hs</h4>
-        </div>
+        <section class="copyright">
+            <p> <a href="#contacto"><i class="fa-solid fa-location-dot"></i> Ubicación ...<i class="fa-solid fa-phone"></i> 3219077777  ...<i class="fa-solid fa-envelope"></i> Mundotech@Bellsouth.es </a> </p>
+                    <br>
+            <h3> MundoTechStore S.R.L. </h3>
+            <h3> Copyright © 2010-2023 </h3>
+        </section>
 
-        <div class="details">
-            <h3>INFORMACIÓN</h3>
-                <ul class="listInfo">
-                    <li><a href="/">Inicio</a></li>
-                    <li><a href="#">Conocenos</a></li>
-                    <li><a href="#">Categorias</a></li>
-                    <li><a href="/products/indexProduct">Productos</a></li>
-                        </ul>
-        </div>
-
-        <div class="details">
-            <h3>ASISTENCIA</h3>
-                <ul class="listConditions">
-                    <li><a href=""> Términos y condiciones</a> </li>
-                    <li><a href=""> Bases y condiciones</a></li>
-                    <li><a href="">Política de Privacidad</a></li>
-                    <li><a href="">Centro de ayuda</a></li>
-                        </ul>
-        </div>
-
-
-    
     </section>
 
 </footer>
-
