--- a/src/views/users/loginRegister.ejs
+++ b/src/views/users/loginRegister.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<%- include('../partials/head') %>
+<%- include('../partials/head', {title: 'Formulario de Login y Registro' , styles: ['loginRegister']}) %>
 
   <body>
 
