--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/head') %>
+<%- include('../partials/head', {title: 'Perfil Usuarios' , styles: ['profile']}) %>
 <body>
     
 
