header&footer fixed

--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -6,54 +6,164 @@
 
 a {
     text-decoration: none;
-    color: inherit;
+    color: #fff;;
 }
 
-body{
+body {
+    font-family: "Roboto Condensed", sans-serif;
+}
+
+/* primera session del body */
+
+.searchingContainer{
+    text-align: center;
+}
+
+.logoSearch {
+    width: 30%;
+    text-align: center;
+}
+
+.menuSearchContainer ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    position: relative;
+}
+
+
+.menuSearchContainer ul li {
+    display: flex;
+    justify-content: center;
+    background-color: palevioletred;
+    box-shadow: 2px 0 25px rgba(2, 2, 2, 0.50);
+    /* box-shadow: 0px 0px 9px -2px #777; */
+    border-radius: 10px;
+}
+
+.menuSearchContainer a {
+    
+    display: block;
+    padding: 0 15px;
+    color: #fff;
+    line-height: 60px;
+    text-decoration: none;
+}
+
+.menuSearchContainer a:hover {
+    background-color: black;
+    border-radius: 10px;
+}
+
+/* Hide Dropdowns by Default */
+.menuSearchContainer ul ul {
+    
+    display: none;
+    position: absolute;
+    /* the height of the main nav */
+}
+
+/* Display Dropdowns on Hover */
+.menuSearchContainer ul li:hover>ul {
+    background-color: #777;
+    border-radius: 10px;
+    display: inherit;
+}
+
+/* Fisrt Tier Dropdown */
+.menuSearchContainer ul ul li {
+    text-align: center;
+    
+    float: none;
+    display: list-item;
+    position: relative;
+}
+
+/* Second, Third and more Tiers	*/
+.menuSearchContainer ul ul ul li {
+    position: relative;
+    top: -40px;
+    right: 60px;
+}
+
+/* Change this in order to change the Dropdown symbol */
+li>a:after {
+    content: " +";
+}
+
+li>a:only-child:after {
+    content: "";
+}
+
+
+.searchForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.searchFormInput {
+    width: 60%;
+    border-radius: 15px;
+    border: none;
+    outline: none;
+    height: 50px;
+    padding: 0px 25px;
+    font-size: 1rem
+}
+
+
+.searchFormButton {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    height: 50px;
+    padding: 0px 25px;
+    background-color: palevioletred;
+    box-shadow: 2px 0 15px rgba(0, 2, 0, 0.50);
+    border: none;
+    border-radius: 15px;
+    color: rgb(255, 255, 255);
+    font-size: 1.4rem;
     
 }
 
-.bannerBottom img{
+.bannerBottom img {
     max-width: 100%;
 }
 
-.shippingContainer{
+.shippingContainer {
     display: flex;
-	padding: 1rem;
-	margin: 15px;
+    padding: 1rem;
+    margin: 15px;
     flex-direction: row-reverse;
 }
 
-.shipping{
+.shipping {
     text-align: center;
     margin-left: 10px;
     padding: 10px;
     box-shadow: 0px 0px 12px -3px #777;
 }
 
-.shipping p{
+.shipping p {
     text-align: justify;
     font-size: 13px;
-	color: gray ;
+    color: gray;
 }
 
-.icn{
+.icn {
     color: black;
     margin: 10px 0px;
-      
+
 }
 
-.payments{
+.payments {
     text-align: center;
-    color: gray ;
+    color: gray;
 }
 
-.payments img{
+.payments img {
     margin: 10px 0px;
     max-width: 100%;
 }
-
-
-
-
-
