--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -19,7 +19,7 @@
                 <h3 class="detailTittle">NAVEGA</h3>
                 <div class="footerRoutes">
                     <P><a href="/">Home</a></P>
-                    <P><a href="//users/login">Inicia Session</a></P>
+                    <P><a href="/users/login">Inicia Session</a></P>
                     <P><a href="/users/register">Registrate</a></P>
                 </div>
             </div>
