--- a/src/views/users/loginRegister.ejs
+++ b/src/views/users/loginRegister.ejs
@@ -134,6 +134,7 @@
       <script src="/js/registerValidations.js"></script>
       <script src="/js/loginRegister.js"></script>
 
+      <%- include('../partials/footer') %>
 
   </body>
 
