--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -1,41 +1,9 @@
 <%- include('../partials/head', {title: 'Perfil Usuarios' , styles: ['profile']}) %>
 <body>
     
+    <%- include('../partials/header') %>
 
 <div class="body-wrapper">
-
-    <nav>
-        <a><img src="/images/logo/footerlogo.png" /></a>
-        <div class="menuProfileContainer">
-            <a class="menu-nav" id="test"> <i class="fa-sharp fa-solid fa-house"></i>
-                <p>Home</p>
-            </a>
-            <a class="menu-nav"><i class="fa-solid fa-globe"></i>
-                <p>sobre nosotros</p>
-            </a>
-            <a class="menu-nav"> <i class="fa-solid fa-user"></i>
-                <p>Jobs</p>
-            </a>
-            <a class="menu-nav"><i class="fa-solid fa-envelope"></i>
-                <p>Mensajes </p>
-            </a>
-            <a class="menu-nav"> <i class="fa-solid fa-flag"></i>
-                <p>Notificaciones</p>
-            </a>
-            <a class="menu-nav"><i class="fa-sharp fa-solid fa-gear"></i>
-                <label for="me-toggle"> Configuracion</label>
-                <input id="me-toggle" type="checkbox" />
-                <div class="me-information-toggle">
-                    <h3>Editar mi Perfil</h3>
-                    <h3>Editar mi Cuenta</h3>
-                    <h3>Upgrade to Premium</h3>
-                    <h3>Editar un Producto</h3>
-                    <h3>Centro de Ayuda</h3>
-                    <h3>Cerrar Session</h3>
-                </div>
-            </a>
-        </div>
-    </nav>
 
     <div class="columnOne">
         <div class="user-profile-container">
