--- a/src/public/css/404.css
+++ b/src/public/css/404.css
@@ -13,6 +13,9 @@
 	background-blend-mode: soft-light;
 	animation: hue-rotate 3s linear infinite;
 	opacity: 0.9;
+	flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .not-found {
@@ -20,6 +23,22 @@
 	margin: 0 auto;
 	font-size: 15em;
 	opacity: 0.7;
+}
+
+.button404{
+	z-index: 1;
+	margin-top: 20px;
+    margin-bottom: 10px;
+    height: 50px;
+    padding: 0px 25px;
+    background-color: rgb(232, 51, 158);
+    border: none;
+    border-radius: 15px;
+    color: rgb(255, 255, 255);
+    font-size: 1.4rem;
+    font-weight: 300;
+    font-family: Montserrat, sans-serif;
+
 }
 
 @keyframes hue-rotate {
