--- a/src/public/css/header.css
+++ b/src/public/css/header.css
@@ -1,112 +1,162 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700");
+
+body {
+  font-family: "Roboto Condensed", sans-serif;
+  background: #F5F5F5;
+}
 
 .headerContainer {
   margin: 0 auto;
-  background-image: url("/images/background/backgHeader.jpg");
+  background: url("/images/background/back.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: unset;
+
 }
 
+.smallScreen{
+  text-align: center;
+}
+
+.fa-bars {
+  position: relative;
+  right: 12%;
+  width: 33px;
+  margin: 10px 0px;
+  height: 34px;
+  background-color: palevioletred;
+    box-shadow: 2px 0 25px rgba(2, 2, 2, 0.50);
+  border: none;
+  border-radius: 10px;
+
+}
+
+.hiddenIcons {
+  height: 5%;
+  background-color: palevioletred;
+  box-shadow: 2px 0 25px rgba(2, 2, 2, 0.50);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+
+}
+
+.hiddenIcons.hidden {
+  display: none;
+}
 
 
 nav {
-  
-  /* background-color: #e64a19; */
+  grid-column: 1/5;
+  grid-row: 1/2;
+  padding: 8px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
-nav ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
+nav img {
+  width: 100px;
+  margin-bottom: 15px;
+  cursor: pointer;
+}
+
+
+nav .menuProfileContainer {
+  display: none
+}
+
+.menu-nav i {
+  display: none;
+}
+
+nav .menuProfileContainer .menu-nav {
   position: relative;
+  margin-right: 25px;
+  cursor: pointer;
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-
-nav ul li {
-  display: inline-block;
-  /* background-color: #e64a19; */
-  box-shadow: 0px 0px 9px -2px #777;
-}
-
-nav a {
-  display: block;
-  padding: 0 10px;
-  color: #fff;
-  font-size: 20px;
-  line-height: 60px;
+nav .menuProfileContainer a {
+  position: relative;
+  margin-top: 5px;
   text-decoration: none;
+  transition: 0.4s;
 }
 
-nav a:hover {
-  background-color: #000000;
+nav .menuProfileContainer a:hover {
+  color: #ff31a2;
 }
 
-/* Hide Dropdowns by Default */
-nav ul ul {
-  display: none;
-  position: absolute;
-  top: 50px; /* the height of the main nav */
-}
-
-/* Display Dropdowns on Hover */
-nav ul li:hover > ul {
-  display: inherit;
-}
-
-/* Fisrt Tier Dropdown */
-nav ul ul li {
-  width: 170px;
-  float: none;
-  display: list-item;
-  position: relative;
-}
-
-/* Second, Third and more Tiers	*/
-nav ul ul ul li {
-    position: relative;
-    top: -40px;
-    right: 60px;
-}
-
-/* Change this in order to change the Dropdown symbol */
-li > a:after {
-  content: " +";
-}
-li > a:only-child:after {
+nav .menuProfileContainer a:after {
   content: "";
+  position: absolute;
+  height: 4px;
+  width: 0;
+  background-color: palevioletred;
+  box-shadow: 2px 0 25px rgba(2, 2, 2, 0.50);
+  bottom: -10px;
+  left: 50%;
+  transition: 0.4s;
+  margin: 0;
 }
 
-.headerLogoContainer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+nav .menuProfileContainer a:hover:after {
+  width: 100%;
+  color: #00618c;
+  left: 0%;
 }
 
-.logo{
-  margin-top: -10px;
-  padding: 10px;
-  width: 35%;
-  box-shadow: 0px 0px 9px -2px #777;
-  border-radius: 30px;  
-}
-
-
-form{
-  display: inherit;
-  background-color: transparent;
-}
-
-input{
-    background-color: transparent;
-    color: lightgrey;
-    width: 400px;
-}
-
-button {
-  width: 20%;
-  border: none;
-  background-color: lightgray;
-  border-radius: 25px;
-}
-
-.logged{
+nav .menuProfileContainer input {
   display: none;
+}
+
+nav .menuProfileContainer label {
+  cursor: pointer;
+}
+
+nav .menuProfileContainer .me-information-toggle {
+  position: absolute;
+  background: white;
+  width: 250px;
+  top: 65px;
+  right: -4px;
+  border: #ccc;
+  box-shadow: 0px 1px 2px 1px #ccc;
+  display: none;
+}
+
+nav .menuProfileContainer .me-information-toggle:after {
+  content: "";
+  position: absolute;
+  background: white;
+  height: 10px;
+  width: 10px;
+  clip-path: polygon(50% 30%, 0% 100%, 100% 100%);
+  right: 5px;
+  top: -9px;
+}
+
+nav .menuProfileContainer .me-information-toggle h3 {
+  position: relative;
+  display: block;
+  padding: 20px;
+  border-bottom: 1px solid #ccc;
+  color: black;
+}
+
+nav .menuProfileContainer .me-information-toggle h3:hover {
+  background: lightgray;
+}
+
+
+
+#me-toggle:checked~.me-information-toggle {
+  display: block;
 }
