--- a/src/public/css/loginRegister.css
+++ b/src/public/css/loginRegister.css
@@ -10,7 +10,7 @@
   }
   
 .user input {
-    background-color: transparent;
+  
     padding: 0;
     border: 0;
     outline: 0;
@@ -50,13 +50,11 @@ input::placeholder {
    * */
 .user {
     display: flex;
-    justify-content: center;
     align-items: center;
     width: 100%;
     height: 500px;
-    background-image: url("/images/background/back.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+
+   
   }
 
 .user_options-container {
@@ -68,7 +66,9 @@ input::placeholder {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    background-color: rgba(189, 199, 223, 0.7);
+    background-color: palevioletred;
+    box-shadow: 2px 0 25px rgba(2, 2, 2, 0.50);
+    opacity: 0.7;
     border-radius: 25px;
   }
   
