--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="/css/queries.css">
     <link rel="stylesheet" href="/css/sliderCarrousel.css">
     <link rel="stylesheet" href="/css/products.css">
+    <link rel="stylesheet" href="/css/header.css">
+
     
 
    
